tests/baselines/reference/es6ImportEqualsExportModuleCommonJsError.errors.txt
tests/cases/compiler/main.ts(1,20): error TS2497: This module can only be imported with ECMAScript imports by turning on the 'esModuleInterop' flag and using a default import.


==== tests/cases/compiler/a.ts (0 errors) ====
    class a { }
    export = a;
    
==== tests/cases/compiler/main.ts (1 errors) ====
    import * as a from "./a";
                       ~~~~~
!!! error TS2497: This module can only be imported with ECMAScript imports by turning on the 'esModuleInterop' flag and using a default import.
    a;
    
    
    